--- a/contact.html
+++ b/contact.html
@@ -1,116 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pradeep Paudel Portfolio</title>
+  <title>Pradeep Paudel Portfolio - Contact</title>
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-sans bg-gray-100">
 
-  <!-- Marquee -->
-  <marquee behavior="scroll" direction="left" class="bg-white py-1">
+<body class="font-sans bg-gray-50">
+
+  <marquee behavior="scroll" direction="left">
     Welcome to Pradeep Paudel's Portfolio | Web Developer & Graphic Designer
   </marquee>
 
-  <!-- Header / Navbar -->
   <header class="bg-white shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">PRADEEP PAUDEL</h1>
-      <nav>
-        <ul class="hidden md:flex gap-6">
-          <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
-          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
-          <li><a href="projects.html" class="hover:text-blue-600">Projects</a></li>
-          <li><a href="whyme.html" class="hover:text-blue-600">Why Me</a></li>
-          <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
-        </ul>
-        <button id="menu-toggle" class="md:hidden focus:outline-none">
+      <div class="hidden md:flex gap-6">
+        <a href="index.html" class="hover:text-indigo-600 transition">Home</a>
+        <a href="about.html" class="hover:text-indigo-600 transition">About</a>
+        <a href="projects.html" class="hover:text-indigo-600 transition">Projects</a>
+        <a href="whyme.html" class="hover:text-indigo-600 transition">Why Me</a>
+        <a href="contact.html" class="hover:text-indigo-600 transition font-semibold underline">Contact</a>
+      </div>
+      <div class="md:hidden">
+        <button id="menu-toggle" aria-label="Toggle menu">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
-      </nav>
+      </div>
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white px-4 pb-4">
-      <a href="index.html" class="block py-2 hover:text-blue-600">Home</a>
-      <a href="about.html" class="block py-2 hover:text-blue-600">About</a>
-      <a href="projects.html" class="block py-2 hover:text-blue-600">Projects</a>
-      <a href="whyme.html" class="block py-2 hover:text-blue-600">Why Me</a>
-      <a href="contact.html" class="block py-2 hover:text-blue-600">Contact</a>
+      <a href="index.html" class="block py-2 hover:text-indigo-600 transition">Home</a>
+      <a href="about.html" class="block py-2 hover:text-indigo-600 transition">About</a>
+      <a href="projects.html" class="block py-2 hover:text-indigo-600 transition">Projects</a>
+      <a href="whyme.html" class="block py-2 hover:text-indigo-600 transition">Why Me</a>
+      <a href="contact.html" class="block py-2 hover:text-indigo-600 transition font-semibold underline">Contact</a>
     </div>
   </header>
 
-  <!-- Contact Form -->
-  <main class="py-10">
-    <div class="max-w-3xl mx-auto bg-white p-8 shadow-md rounded">
-      <h1 class="text-2xl font-bold mb-6 text-center">Contact Form</h1>
+  <main class="container mx-auto max-w-3xl p-6 mt-10 bg-white rounded shadow-md">
+    <h2 class="text-3xl font-bold text-center text-indigo-700 mb-8">Contact Me</h2>
 
-      <form id="contact-form">
-        <div class="md:flex md:space-x-4">
-          <div class="md:w-1/2">
-            <label>First Name</label>
-            <input type="text" name="firstName" required class="w-full px-4 py-2 border rounded" />
-          </div>
-          <div class="md:w-1/2 mt-4 md:mt-0">
-            <label>Surname</label>
-            <input type="text" name="surname" required class="w-full px-4 py-2 border rounded" />
-          </div>
-        </div>
-
-        <label class="block mt-4">Gender</label>
-        <div class="flex gap-4">
-          <label><input type="radio" name="gender" value="Male" required> Male</label>
-          <label><input type="radio" name="gender" value="Female"> Female</label>
-          <label><input type="radio" name="gender" value="Other"> Other</label>
-        </div>
-
-        <label class="block mt-4">Country</label>
-        <select name="country" required class="w-full px-4 py-2 border rounded">
-          <option value="">-- Select your country --</option>
-          <option value="Nepal">Nepal</option>
-          <option value="India">India</option>
-          <option value="USA">USA</option>
-          <option value="Other">Other</option>
-        </select>
-
-        <label class="block mt-4">Mobile Number</label>
-        <input type="tel" name="mobile" pattern="[0-9]{10}" required placeholder="e.g. 9800000000"
-          class="w-full px-4 py-2 border rounded" />
-
-        <label class="block mt-4">Email Address</label>
-        <input type="email" name="email" required class="w-full px-4 py-2 border rounded" />
-
-        <label class="block mt-4">Address</label>
-        <input type="text" name="address" class="w-full px-4 py-2 border rounded" />
-
-        <label class="block mt-4">Your Message</label>
-        <textarea name="message" rows="5" required class="w-full px-4 py-2 border rounded"></textarea>
-
-        <div class="mt-4 space-y-2">
-          <label><input type="checkbox" name="subscribe" /> Subscribe to newsletter</label><br />
-          <label><input type="checkbox" name="updates" /> Send me updates about new projects</label><br />
-          <label><input type="checkbox" name="terms" required /> I agree to the terms and conditions</label><br />
-          <label><input type="checkbox" name="privacy" required /> I agree to the privacy policy</label>
-        </div>
-
-        <div class="text-center mt-6">
-          <button type="submit"
-            class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600 transition">Submit</button>
-          <p class="text-sm text-gray-500 mt-4">* All fields are required.</p>
-        </div>
-      </form>
-
-      <p id="success-msg" class="hidden mt-4 text-green-600 text-center font-semibold">
-        Form submitted successfully!
-      </p>
+   <form id="contact-form" class="space-y-6">
+  <div class="md:flex md:space-x-4">
+    <div class="md:flex-1">
+      <label for="firstName" class="block font-semibold mb-1 text-gray-700">First Name</label>
+      <input id="firstName" name="firstName" type="text" required
+        class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
     </div>
+    <div class="md:flex-1 mt-4 md:mt-0">
+      <label for="surname" class="block font-semibold mb-1 text-gray-700">Surname</label>
+      <input id="surname" name="surname" type="text" required
+        class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+    </div>
+  </div>
+
+  <div>
+    <label class="block font-semibold mb-1 text-gray-700">Gender</label>
+    <div class="flex gap-6">
+      <label class="inline-flex items-center">
+        <input type="radio" name="gender" value="Male" required class="form-radio text-indigo-600" />
+        <span class="ml-2">Male</span>
+      </label>
+      <label class="inline-flex items-center">
+        <input type="radio" name="gender" value="Female" required class="form-radio text-indigo-600" />
+        <span class="ml-2">Female</span>
+      </label>
+      <label class="inline-flex items-center">
+        <input type="radio" name="gender" value="Other" required class="form-radio text-indigo-600" />
+        <span class="ml-2">Other</span>
+      </label>
+    </div>
+  </div>
+
+  <div>
+    <label for="country" class="block font-semibold mb-1 text-gray-700">Country</label>
+    <select id="country" name="country" required
+      class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+      <option value="">-- Select your country --</option>
+      <option value="Nepal">Nepal</option>
+      <option value="India">India</option>
+      <option value="USA">USA</option>
+      <option value="Other">Other</option>
+    </select>
+  </div>
+
+  <div>
+    <label for="mobile" class="block font-semibold mb-1 text-gray-700">Mobile Number</label>
+    <input id="mobile" name="mobile" type="tel" pattern="[0-9]{10}" placeholder="e.g. 9800000000" required
+      class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+  </div>
+
+  <div>
+    <label for="email" class="block font-semibold mb-1 text-gray-700">Email Address</label>
+    <input id="email" name="email" type="email" required
+      class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+  </div>
+
+  <div>
+    <label for="address" class="block font-semibold mb-1 text-gray-700">Address</label>
+    <input id="address" name="address" type="text" required
+      class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400" />
+  </div>
+
+  <div>
+    <label for="message" class="block font-semibold mb-1 text-gray-700">Your Message</label>
+    <textarea id="message" name="message" rows="5" required
+      class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-400"></textarea>
+  </div>
+
+  <div class="space-y-2 text-gray-700">
+    <label class="inline-flex items-center">
+      <input type="checkbox" name="subscribe" required class="form-checkbox text-indigo-600" />
+      <span class="ml-2">Subscribe to newsletter</span>
+    </label>
+    <label class="inline-flex items-center">
+      <input type="checkbox" name="updates" required class="form-checkbox text-indigo-600" />
+      <span class="ml-2">Send me updates about new projects</span>
+    </label>
+    <label class="inline-flex items-center">
+      <input type="checkbox" name="terms" required class="form-checkbox text-indigo-600" />
+      <span class="ml-2">I agree to the terms and conditions</span>
+    </label>
+    <label class="inline-flex items-center">
+      <input type="checkbox" name="privacy" required class="form-checkbox text-indigo-600" />
+      <span class="ml-2">I agree to the privacy policy</span>
+    </label>
+  </div>
+
+  <div class="text-center mt-6">
+    <button type="submit"
+      class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-8 py-2 rounded shadow transition">
+      Submit
+    </button>
+    <p class="text-sm text-gray-500 mt-2">* All fields are required.</p>
+  </div>
+</form>
+<p id="success-msg" class="hidden mt-4 text-green-600 font-semibold text-center">
+  Thank you! Form submitted successfully.
+</p>
+
   </main>
 
-  <!-- Footer -->
-  <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8">
+  <footer class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 py-8 mt-16">
     <div class="max-w-4xl mx-auto flex flex-col items-center space-y-4 px-4 text-center">
       <img src="image/4.jpg" alt="Pradeep Logo"
         class="w-16 h-16 rounded-full shadow-lg border border-gray-300" />
@@ -123,8 +161,7 @@
               d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 5 3.657 9.127 8.438 9.878v-6.988H7.898v-2.89h2.54V9.797c0-2.506 1.493-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.988C18.343 21.127 22 17 22 12z" />
           </svg>
         </a>
-        <a href="https://wa.me/9779765671782" target="_blank"
-          class="text-green-500 hover:text-green-600 transition">
+        <a href="https://wa.me/9779765671782" target="_blank" class="text-green-500 hover:text-green-600 transition">
           <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 32 32">
             <path
               d="M16 2C8.27 2 2 8.27 2 16a13.91 13.91 0 002.05 7.24L2 30l6.9-1.94A13.92 13.92 0 0016 30c7.73 0 14-6.27 14-14S23.73 2 16 2zm7.9 19.1l-2.1.65a1.4 1.4 0 01-1.6-.6l-.8-1.2a10.2 10.2 0 01-4.8-4.8l-1.2-.8a1.4 1.4 0 01-.6-1.6l.65-2.1a.6.6 0 01.65-.45h1.3a.6.6 0 01.6.45l.65 1.9a.6.6 0 01-.15.6L14 13.2a9.4 9.4 0 004.8 4.8l1.25-.75a.6.6 0 01.6-.15l1.9.65a.6.6 0 01.45.6v1.3a.6.6 0 01-.45.65z" />
@@ -142,33 +179,36 @@
     </div>
   </footer>
 
-  <!-- Floating Home Button -->
-  <a href="index.html"
-    class="fixed bottom-6 right-6 bg-blue-600 text-white px-4 py-2 flex items-center gap-2 rounded-full shadow-lg hover:bg-blue-700 transition z-50">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none"
-      viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M3 12l2-2m0 0l7-7 7 7M13 5v6h6m-6 0H7m6 0v6" />
-    </svg>
-    <span class="text-sm font-semibold">Home</span>
-  </a>
-
-  <!-- Mobile menu toggle script -->
   <script>
-    const toggleBtn = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
+     const form = document.getElementById('contact-form');
+const successMsg = document.getElementById('success-msg');
 
-    toggleBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
+form.addEventListener('submit', e => {
+  e.preventDefault();
 
-    // Optional: close mobile menu on link click
-    mobileMenu.querySelectorAll('a').forEach(link => {
-      link.addEventListener('click', () => {
-        mobileMenu.classList.add('hidden');
-      });
-    });
+  if (!form.checkValidity()) {
+    form.reportValidity();
+    return;
+  }
+
+  // Show success message
+  successMsg.classList.remove('hidden');
+
+  // Collect form data
+  const formData = new FormData(form);
+  const params = new URLSearchParams();
+
+  for (const [key, value] of formData.entries()) {
+    params.append(key, value);
+  }
+
+  // Delay a bit so user can see success message, then redirect
+  setTimeout(() => {
+    window.location.href = 'details.html?' + params.toString();
+  }, 1500);
+
+});
   </script>
-
 </body>
+
 </html>
